--- a/giphy/src/main/res/layout/view_giphy.xml
+++ b/giphy/src/main/res/layout/view_giphy.xml
@@ -5,11 +5,18 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
-        android:adjustViewBounds="true"/>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/darker_gray"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"/>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
