--- a/giphy/src/main/res/layout/view_giphy.xml
+++ b/giphy/src/main/res/layout/view_giphy.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
@@ -11,7 +11,7 @@
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/image_view"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/darker_gray"
             android:scaleType="fitCenter"
