--- a/giphy/src/main/res/layout/activity_giphy.xml
+++ b/giphy/src/main/res/layout/activity_giphy.xml
@@ -6,17 +6,56 @@
     android:layout_height="match_parent"
     tools:context="com.example.giphy.activities.GiphyActivity">
 
-    <android.support.v7.widget.AppCompatEditText
-        android:id="@+id/edit_text"
+    <RelativeLayout
+        android:id="@+id/navigation_container"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:hint="Search Giphy"/>
+        android:layout_height="wrap_content"
+        android:background="@android:color/black"
+        android:padding="10dp">
+
+        <RelativeLayout
+            android:id="@+id/navigation_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.AppCompatImageView
+                android:layout_width="75dp"
+                android:layout_height="20.25dp"
+                android:background="@mipmap/ic_attribution"/>
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/done"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="center_vertical"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                android:text="DONE" />
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.AppCompatEditText
+            android:id="@+id/edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@+id/navigation_bar"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/background_edit_text"
+            android:maxLines="1"
+            android:padding="5dp"
+            android:textSize="14sp"
+            android:hint="Search Giphy"/>
+
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_below="@+id/edit_text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/navigation_container"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp">
 
     </android.support.v7.widget.RecyclerView>
 
