--- a/giphy/src/main/res/layout/view_giphy.xml
+++ b/giphy/src/main/res/layout/view_giphy.xml
@@ -7,12 +7,13 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="3dp">
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/image_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:background="@android:color/darker_gray"
             android:scaleType="fitCenter"
             android:adjustViewBounds="true"/>
