--- a/giphy/src/main/res/layout/view_giphy.xml
+++ b/giphy/src/main/res/layout/view_giphy.xml
@@ -8,7 +8,9 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp">
+        android:layout_marginTop="6dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp">
 
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/image_view"
